Fixed typo in author meta field

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Curso de formación para gestores SIGUA - La función del PAS en el protocolo de espacios de la Universidad de Alicante</title>
 
 		<meta name="description" content="Curso para el PAS de la Universidad de Alicante responsable de la gestión de lo espacios de su unidad o departamento">
-		<meta name="author" content="José Tomás NAvarro Carrión">
+		<meta name="author" content="José Tomás Navarro Carrión">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
