Changed title slide so that it looks less overfull

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Curso de formación para gestores SIGUA</h1>
-					<h3>La función del PAS en el protocolo de espacios de la Universidad de Alicante</h3>
+					<h1>Curso para gestores SIGUA</h1>
+					<h4>La función del PAS en el protocolo de espacios de la Universidad de Alicante</h3>
 					<p>
 						<small>Creado por el <a href="http://iig.ua.es/es/geomatica/">Laboratorio de Geomática del Instituto Interuniversitario de Geografía</a> / <a href="http://twitter.com/geomatica_ua">@geomatica_ua</a></small>
 					</p>
