Load slides from external markdown

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 						<small>Creado por el <a href="http://iig.ua.es/es/geomatica/">Laboratorio de Geomática del Instituto Interuniversitario de Geografía</a> / <a href="http://twitter.com/geomatica_ua">@geomatica_ua</a></small>
 					</p>
 				</section>
-
+				
+				<section data-markdown="slides.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="UTF-8">
+				</section>
 
 			</div>
 
