--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		
+		<!-- Font Awesome icons -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
