Linked custom fontawesome style sheet

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		
 		<!-- Font Awesome icons -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<!-- Font Awesome custom classes -->
+		<link rel="stylesheet" href="custom-css/fa.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
